Add property declaration guide

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
 @import 'colors.scss';
 @import 'fonts.scss';
 
-html, body {
-  margin: 0;
-  padding: 0;
+//Property Declaration Order:
+// Positioning
+// Box-model
+// Typography
+// Visual
+// Misc
 
-  height: 100%;
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
 
 body {
