Update nav-drawer to use NavService

--- a/src/app/nav-drawer/nav-drawer.component.html
+++ b/src/app/nav-drawer/nav-drawer.component.html
@@ -1,5 +1,2 @@
 <img class="logo-flat" src="../../assets/images/logo_flat.png" alt="">
-<app-nav-item icon="queue" selected>Queue</app-nav-item>
-<app-nav-item icon="video_library">Library</app-nav-item>
-<app-nav-item icon="people">Connections</app-nav-item>
-<app-nav-item icon="settings">Settings</app-nav-item>
+<app-nav-item [navItem]="navItem" *ngFor="let navItem of navService.navItems"></app-nav-item>
