Add spacing below logo

--- a/src/app/nav-drawer/nav-drawer.component.scss
+++ b/src/app/nav-drawer/nav-drawer.component.scss
@@ -18,7 +18,8 @@
     // Misc
 
     img.logo-flat {
-        margin: 24px 0;
+        margin-top: 24px;
+        margin-bottom: 40px;
         width: 175px;
         height: auto;
     }
