--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,13 @@ body {
     font-weight: $font-weight-semibold;
 }
 
+app-root {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
 h1, h2, h3, h4 {
     font-weight: $font-weight-bold;
     margin: 0;
