Add "export clips" FAB to queue-component

--- a/src/app/queue/queue.component.html
+++ b/src/app/queue/queue.component.html
@@ -1,1 +1,4 @@
-<app-extended-fab class="primary" icon="add" (click)="doSomething()">ADD CLIP</app-extended-fab>
+<div class="fabs">
+    <app-extended-fab class="secondary" icon="play_arrow" (click)="doSomething()">EXPORT ALL CLIPS</app-extended-fab>
+    <app-extended-fab class="primary" icon="add" (click)="doSomething()">ADD CLIP</app-extended-fab>
+</div>
