--- a/src/app/splash/splash.component.scss
+++ b/src/app/splash/splash.component.scss
@@ -1,4 +1,5 @@
 @import 'colors.scss';
+@import 'animations.scss';
 
 :host {
     position: fixed;
@@ -10,14 +11,16 @@
     width: 100%;
     height: 100%;
     background: $color-background;
-    transition: opacity 0.5s ease-in-out;
-
-    video {
-        width: 70%;
-        margin-left: -3%
-    }
 
     &.fade-out {
-        opacity: 0;
+        animation-fill-mode: forwards;
+        animation: fade-out 0.5s ease-in-out;
+    }
+
+    video {
+        animation: fade-in 0.5s ease-in-out;
+
+        width: 70%;
+        margin-left: -3%
     }
 }
