Update logo animation - cropped and sped up

--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -1,1 +1,1 @@
-<video src="../../assets/splash_animation.mp4" autoplay #splash_animation></video>
+<video src="../../assets/logo_animated.mp4" autoplay></video>
