Refactor NavService items to be in new property

--- a/src/app/nav-drawer/nav-drawer.component.html
+++ b/src/app/nav-drawer/nav-drawer.component.html
@@ -1,2 +1,2 @@
 <img class="logo-flat" src="../../assets/images/logo_flat.png" alt="">
-<app-nav-item [navItem]="navItem" *ngFor="let navItem of navService.navItems"></app-nav-item>
+<app-nav-item [navItem]="navItem" *ngFor="let navItem of navService.navItemsIterable"></app-nav-item>
