add chip template + styles

--- a/src/app/queue/queue.component.html
+++ b/src/app/queue/queue.component.html
@@ -1,3 +1,5 @@
+<app-chip style="margin: 24px;"></app-chip>
+
 <div class="fabs">
     <app-extended-fab class="secondary" icon="play_arrow" (click)="doSomething()">EXPORT ALL CLIPS</app-extended-fab>
     <app-extended-fab class="primary" icon="add" (click)="doSomething()">ADD CLIP</app-extended-fab>
