--- a/src/app/shared/chip/chip.component.html
+++ b/src/app/shared/chip/chip.component.html
@@ -1,3 +1,5 @@
-<p>
-  chip works!
-</p>
+<app-ripple>
+    <div class="chip">
+        <span class="chip-label">I am a chip!</span>
+    </div>
+</app-ripple>
