--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,10 @@ body {
     color: $color-font-primary;
     font-family: $font-family;
     font-weight: $font-weight-semibold;
+    
+    * {
+        box-sizing: border-box;
+    }
 }
 
 app-root {
