fix header styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,12 +35,11 @@ app-root {
     overflow: hidden;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5, h6 {
     font-weight: $font-weight-bold;
     margin: 0;
 }
 
-h5 {
+h5, h6 {
     font-weight: $font-weight-semibold;
-    margin: 0;
 }
