Make dummy video-card to get styles in

--- a/src/app/queue/queue.component.html
+++ b/src/app/queue/queue.component.html
@@ -1,4 +1,4 @@
-<app-chip style="margin: 24px;"></app-chip>
+<app-video-card></app-video-card>
 
 <div class="fabs">
     <app-extended-fab class="secondary" icon="play_arrow" (click)="doSomething()">EXPORT ALL CLIPS</app-extended-fab>
