--- a/src/app/shared/video-card/video-card.component.html
+++ b/src/app/shared/video-card/video-card.component.html
@@ -1,3 +1,8 @@
-<p>
-  video-card works!
-</p>
+<div class="title-container">
+    <h6 class="title">My Video</h6>
+    <span class="sub-title">4:13 &bull; 20MB</span>
+</div>
+<img class="thumbnail" src="../../../assets/images/demo_thumbnail.jpg" alt="">
+<div class="buttons">
+    <app-button text>EXPORT</app-button>
+</div>
