--- a/src/app/shared/chip/chip.component.scss
+++ b/src/app/shared/chip/chip.component.scss
@@ -13,6 +13,7 @@
         border-radius: 16px;
 
         span.chip-label {
+            cursor: default;
             font-size: 14px;
             font-weight: $font-weight-regular;
         }
