--- a/src/app/shared/button/button.component.html
+++ b/src/app/shared/button/button.component.html
@@ -1,1 +1,4 @@
-<ng-content (click)="onClick()"></ng-content>
+<div [class]="'btn-container mat-ripple ' + type.className" matRipple>
+    <i class="material-icons" *ngIf="icon">{{icon}}</i>
+    <ng-content (click)="onClick()"></ng-content>
+</div>
