Change export button in video-card to be contained with icon, float right

--- a/src/app/shared/video-card/video-card.component.html
+++ b/src/app/shared/video-card/video-card.component.html
@@ -4,5 +4,5 @@
 </div>
 <img class="thumbnail" src="../../../assets/images/demo_thumbnail.jpg" alt="">
 <div class="buttons">
-    <app-button text>EXPORT</app-button>
+    <app-button icon="play_arrow">EXPORT</app-button>
 </div>
