--- a/src/app/shared/video-card/video-card.component.scss
+++ b/src/app/shared/video-card/video-card.component.scss
@@ -29,7 +29,8 @@
     }
 
     .buttons {
-        margin-left: -8px;
-        margin-bottom: -8px;
+        display: flex;
+        flex-direction: row-reverse;
+        margin: -8px;
     }
 }
