--- a/src/app/shared/button/button.component.scss
+++ b/src/app/shared/button/button.component.scss
@@ -5,12 +5,11 @@
     font-size: 14px;
     letter-spacing: 1px;
     cursor: pointer;
-    transition: background-color 0.2s;
+    transition: background-color 0.2s, box-shadow 0.2s;
     display: flex;
     padding: 8px 16px;
     border-radius: 4px;
     min-width: 64px;
-    width: auto;
     height: 36px;
     align-items: center;
 
