Prevent mousedown propagation on buttons

--- a/src/app/shared/button/button.component.html
+++ b/src/app/shared/button/button.component.html
@@ -1,7 +1,7 @@
 <div [class]="'btn-container mat-ripple ' + type.className"
      [class.mat-elevation-z6]="!pressed && type === buttonTypes.contained"
      [class.mat-elevation-z12]="pressed && type === buttonTypes.contained"
-     (mousedown)="mouseDown()"
+     (mousedown)="mouseDown($event)"
      (mouseup)="mouseUp()"
      matRipple
      [matRippleColor]="type.rippleColor">
