Add elevation, ripple, and youtube logo to video-card

--- a/src/app/shared/video-card/video-card.component.html
+++ b/src/app/shared/video-card/video-card.component.html
@@ -1,8 +1,12 @@
-<div class="title-container">
-    <h6 class="title">My Video</h6>
-    <span class="sub-title">4:13 &bull; 20MB</span>
-</div>
-<img class="thumbnail" src="../../../assets/images/demo_thumbnail.jpg" alt="">
-<div class="buttons">
-    <app-button text>EXPORT</app-button>
+<div class="video-card mat-ripple mat-elevation-z1" matRipple>
+    <div class="title-container">
+        <h6 class="title">My Video</h6>
+        <span class="sub-title">
+            4:13 &bull; 20MB &bull; <img class="youtube-logo" src="../../../assets/images/youtube_logo_light.svg">
+        </span>
+    </div>
+    <img class="thumbnail" src="../../../assets/images/demo_thumbnail.jpg" alt="">
+    <div class="buttons">
+        <app-button text>EXPORT</app-button>
+    </div>
 </div>
