--- a/src/app/shared/video-card/video-card.component.scss
+++ b/src/app/shared/video-card/video-card.component.scss
@@ -1,7 +1,7 @@
 @import 'colors.scss';
 @import 'fonts.scss';
 
-:host {
+.video-card {
     display: flex;
     flex-direction: column;
     width: 344px;
@@ -16,9 +16,16 @@
         }
 
         .sub-title {
+            display: flex;
+            align-items: center;
             font-weight: $font-weight-regular;
             font-size: 13px;
             opacity: 0.8;
+
+            .youtube-logo {
+                height: 13px;
+                margin-left: 4px;
+            }
         }
     }
 
