Add "Will be uploaded to YouTube" tooltip to youtube icon

--- a/src/app/shared/video-card/video-card.component.html
+++ b/src/app/shared/video-card/video-card.component.html
@@ -2,7 +2,8 @@
     <div class="title-container">
         <h6 class="title">My Video</h6>
         <span class="sub-title">
-            4:13 &bull; 20MB &bull; <img class="youtube-logo" src="../../../assets/images/youtube_logo_light.svg">
+            4:13 &bull; 20MB &bull;
+            <img class="youtube-logo" src="../../../assets/images/youtube_logo_light.svg" matTooltip="Will be uploaded to YouTube">
         </span>
     </div>
     <img class="thumbnail" src="../../../assets/images/demo_thumbnail.jpg" alt="">
