refactor extended-fab to use html boolean attributes instead of classes this allows easily setting the type of fab, which in turn lets us change the ripple color easily

--- a/src/app/queue/queue.component.html
+++ b/src/app/queue/queue.component.html
@@ -1,6 +1,6 @@
 <app-video-card></app-video-card>
 
 <div class="fabs">
-    <app-extended-fab class="secondary" icon="play_arrow" (clicked)="doSomething()">EXPORT ALL CLIPS</app-extended-fab>
-    <app-extended-fab class="primary" icon="add" (clicked)="doSomething()">ADD CLIP</app-extended-fab>
+    <app-extended-fab icon="play_arrow" (clicked)="doSomething()" secondary>EXPORT ALL CLIPS</app-extended-fab>
+    <app-extended-fab icon="add" (clicked)="doSomething()">ADD CLIP</app-extended-fab>
 </div>
