--- a/src/app/shared/extended-fab/extended-fab.component.scss
+++ b/src/app/shared/extended-fab/extended-fab.component.scss
@@ -1,20 +1,18 @@
 @import 'colors.scss';
 @import 'mixins.scss';
 
-:host {
-    .fab-container {
-        display: flex;
-        border-radius: 24px;
-        padding: 10px;
-        padding-right: 20px;
-        align-items: center;
-        width: auto;
+.fab-container {
+    display: flex;
+    border-radius: 24px;
+    padding: 10px;
+    padding-right: 20px;
+    align-items: center;
+    width: auto;
+
+    cursor: pointer;
+    transition: background-color 0.2s, box-shadow 0.2s;
     
-        cursor: pointer;
-        transition: background-color 0.2s, box-shadow 0.2s;
-    }
-    
-    &.primary .fab-container {
+    &.primary {
         @include background-opacity($color-secondary, 0.8);
         color: $color-font-secondary;
 
@@ -23,7 +21,7 @@
         }
     }
 
-    &.secondary .fab-container {
+    &.secondary {
         @include background-opacity($color-primary-light, 0.8);
         color: $color-secondary-light;
 
