Make color-primary-light lighter

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,5 +1,5 @@
 $color-primary: #212121;
-$color-primary-light: #2b2b2b;
+$color-primary-light: #303030;
 $color-primary-dark: #141414;
 $color-background: $color-primary-dark;
 
