Override mat-tooltip font

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,3 +44,7 @@ h1, h2, h3, h4, h5, h6 {
 h5, h6 {
     font-weight: $font-weight-semibold;
 }
+
+.mat-tooltip {
+    font-family: $font-family !important;
+}
