Update clip-card to use clip.model, support video play on hover

--- a/src/app/queue/queue.component.html
+++ b/src/app/queue/queue.component.html
@@ -10,5 +10,5 @@
 </app-top-bar>
 
 <div class="queue-body">
-    <app-clip-card></app-clip-card>
+    <app-clip-card [clip]="testClip"></app-clip-card>
 </div>
