--- a/src/app/queue/queue.component.scss
+++ b/src/app/queue/queue.component.scss
@@ -1,7 +1,16 @@
+@import 'animations.scss';
+
 :host {
     width: 100%;
 
-    .queue-body {
+    .clips {
+        display: flex;
+        flex-wrap: wrap;
         padding: 16px;
+
+        app-clip-card {
+            margin-right: 16px;
+            margin-bottom: 16px;
+        }
     }
 }
