--- a/src/app/shared/top-bar/top-bar.component.scss
+++ b/src/app/shared/top-bar/top-bar.component.scss
@@ -1,42 +1,55 @@
 @import 'colors.scss';
+@import 'animations.scss';
 
 .top-bar {
     position: relative;
     width: 100%;
     top: 0;
-    height: 96px;
+    height: 80px;
     background-color: $color-primary;
-    margin-bottom: 24px;
+    margin-bottom: 0;
 
-    ::ng-deep .title {
+    transition: height 0.3s ease-in-out, margin-bottom 0.3s ease-in-out;
+
+    &.has-fabs {
+        height: 96px;
+        margin-bottom: 24px;
+    }
+
+    .back {
         position: absolute;
-        top: 24px;
+        top: 22px;
+    }
+
+    .title {
+        position: absolute;
+        top: 26px;
         left: 72px;
         font-size: 24px;
     }
 
-    ::ng-deep .action-items {
+    .action-items {
         display: flex;
         position: absolute;
-        top: 18px;
+        top: 20px;
         right: 0;
         flex-direction: row-reverse;
         margin-right: 16px;
         height: 24px;
-
-        i {
-            margin-left: 18px;
-            height: 36px;
-            width: 36px;
-            border-radius: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-        }
     }
     
-    ::ng-deep .fabs {
+    i {
+        margin-left: 18px;
+        height: 36px;
+        width: 36px;
+        border-radius: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+    
+    .fabs {
         top: 72px;
         display: flex;
         position: absolute;
