--- a/src/assets/styles/animations.scss
+++ b/src/assets/styles/animations.scss
@@ -7,3 +7,27 @@
     from { opacity: 1; }
     to { opacity: 0; }
 }
+
+@mixin fade-out($duration: 0.5s) {
+    animation: fade-out $duration ease-in-out;
+    animation-fill-mode: forwards;    
+}
+
+@mixin fade-in($duration: 0.5s) {
+    animation: fade-in $duration ease-in-out;
+    animation-fill-mode: forwards;
+}
+
+.fade-in {
+    @include fade-in();
+}
+.fade-in-fast {
+    @include fade-in(0.2s);
+}
+
+.fade-out {
+    @include fade-out();
+}
+.fade-out-fast {
+    @include fade-out(0.2s);
+}
