--- a/src/app/shared/clip-card/clip-card.component.html
+++ b/src/app/shared/clip-card/clip-card.component.html
@@ -1,4 +1,4 @@
-<div class="video-card mat-ripple mat-elevation-z1" matRipple>
+<div class="clip-card mat-ripple mat-elevation-z1" matRipple (click)="clicked()">
     <div class="title-container">
         <h6 class="title">{{clip.title}}</h6>
         <span class="sub-title">
