--- a/src/app/shared/clip-card/clip-card.component.scss
+++ b/src/app/shared/clip-card/clip-card.component.scss
@@ -1,11 +1,45 @@
 @import 'colors.scss';
 @import 'fonts.scss';
+@import 'animations.scss';
+
+.clip-card-container {
+    width: 344px;
+    height: 320px;
+    overflow: visible;
+}
+
+.clip-edit-card {
+    z-index: 1000;
+    position: absolute;
+    background: $color-primary;
+    transition: width 0.2s,
+                height 0.2s,
+                top 0.4s,
+                left 0.4s,
+                margin-left 0.4s;
+    transition-timing-function: ease;
+
+    margin-left: 0;
+    width: 344px;
+    height: 320px;
+
+    &.expand {
+        top: 16px !important;
+        left: 50% !important;
+        margin-left: -400px;
+        width: 1000px;
+        height: 1200px;
+    }
+
+    .edit-contents {
+        opacity: 0;
+    }
+}
 
 .clip-card {
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    width: 344px;
     padding: 16px;
     border-radius: 4px;
     background: $color-primary;
