Add align-content: start to queue

--- a/src/app/queue/queue.component.scss
+++ b/src/app/queue/queue.component.scss
@@ -5,6 +5,7 @@
         display: flex;
         position: relative;
         flex-wrap: wrap;
+        align-content: start;
         padding: 16px;
         height: 100%;
         
