Move morph.scss to global styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @import 'colors.scss';
 @import 'fonts.scss';
 @import 'animations.scss';
+@import 'morph.scss';
 
 //Property Declaration Order:
 // Positioning
