--- a/src/app/shared/clip-card/clip-card.component.scss
+++ b/src/app/shared/clip-card/clip-card.component.scss
@@ -7,31 +7,6 @@
     overflow: visible;
 }
 
-.clip-edit-card {
-    z-index: 1000;
-    position: absolute;
-    background: $color-primary;
-    transition-property: width, height, top, left, margin-left;
-    transition-duration: 0.3s;
-    transition-timing-function: ease;
-
-    margin-left: 0;
-    width: 344px;
-    height: 320px;
-
-    &.expand {
-        top: 16px !important;
-        left: 50% !important;
-        margin-left: -400px;
-        width: 800px;
-        height: 1200px;
-    }
-
-    .edit-contents {
-        opacity: 0;
-    }
-}
-
 .clip-card {
     cursor: pointer;
     display: flex;
@@ -72,4 +47,17 @@
         flex-direction: row-reverse;
         margin: -8px;
     }
+}
+
+.edit-clip-scrim {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    padding-top: 32px;
+    position: absolute;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
