--- a/src/app/shared/extended-fab/extended-fab.component.scss
+++ b/src/app/shared/extended-fab/extended-fab.component.scss
@@ -8,6 +8,7 @@
     padding-right: 20px;
     align-items: center;
     height: 48px;
+    z-index: 1000;
 
     cursor: pointer;
     transition: background-color 0.2s, box-shadow 0.2s;
