Add .mat-input font weight style

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,8 +47,8 @@ h5, h6 {
     font-weight: $font-weight-semibold;
 }
 
-.mat-tooltip {
-    font-family: $font-family !important;
+input.mat-input-element {
+    font-weight: $font-weight-semibold;
 }
 
 .material-icons {
