Add video to editclip

--- a/src/app/shared/clip-card/edit-clip/edit-clip.component.html
+++ b/src/app/shared/clip-card/edit-clip/edit-clip.component.html
@@ -10,6 +10,7 @@
         </mat-radio-group>
     </div>
 </form>
+<video src="../../../../assets/demo_clip.mp4"></video>
 <div class="buttons">
     <app-button outlined (clicked)="editClipService.closeEdit()">CANCEL</app-button>
     <app-button primary>SAVE</app-button>
