--- a/src/app/shared/clip-card/edit-clip/edit-clip.component.scss
+++ b/src/app/shared/clip-card/edit-clip/edit-clip.component.scss
@@ -1,13 +1,15 @@
 @import 'colors.scss';
 
 :host {
+    position: relative;
     border-radius: 4px;
     padding: 24px;
+    padding-bottom: 80px;
     display: flex;
     flex-direction: column;
     background: $color-primary;
     width: 800px;
-    height: 1000px;
+    height: fit-content;
 
     form {
         display: flex;
@@ -30,6 +32,13 @@
                 margin-left: 16px;
             }
         }
+    }
+
+    video {
+        width: 800px;
+        height: 450px;
+        margin-left: -24px;
+        margin-top: 24px;
     }
 
     .buttons {
